cmake_minimum_required(VERSION 3.3)

project(leetcode)

add_subdirectory(lib/gtest-1.7.0)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
include_directories(lib/list/include lib/list/src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_library(linked_list lib/list/src/list.cpp)

function(target name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} gtest gtest_main linked_list)
endfunction(target)

target(001-two-sum)
target(141-linked-list-cycle)
target(142-linked-list-cycle-ii)
target(021-merge-two-sorted-lists)
target(019-remove-nth-node-from-end-of-list)
target(083-remove-duplicates-from-sorted-list)
target(231-power-of-two)
target(191-number-of-1-bits)
target(326-power-of-three)
target(169-majority-element)
target(027-remove-element)
target(168-excel-sheet-column-title)
target(203-remove-linked-list-elements)
target(328-odd-even-linked-list)
target(069-sqrtx)
target(136-single-number)
target(137-single-number-ii)
target(237-delete-node-in-a-linked-list)
target(206-reverse-linked-list)
target(338-counting-bits)
target(160-intersection-of-two-linked-lists)
target(066-plus-one)
target(007-reverse-integer)
target(070-climbing-stairs)
target(026-remove-duplicates-from-sorted-array)
target(190-reverse-bits)
target(171-excel-sheet-column-number)
target(024-swap-nodes-in-pairs)
target(217-contains-duplicate)
target(283-move-zeroes)
target(002-add-two-numbers)
