cmake_minimum_required(VERSION 3.3)

project(leetcode)

add_subdirectory(lib/gtest-1.7.0)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
include_directories(lib/list/include lib/list/src)
include_directories(lib/tree/include lib/tree/src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_library(linked_list lib/list/src/list.cpp lib/tree/src/tree.cpp)

function(target name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} gtest gtest_main linked_list)
endfunction(target)

target(001-two-sum)
target(141-linked-list-cycle)
target(142-linked-list-cycle-ii)
target(021-merge-two-sorted-lists)
target(019-remove-nth-node-from-end-of-list)
target(083-remove-duplicates-from-sorted-list)
target(231-power-of-two)
target(191-number-of-1-bits)
target(326-power-of-three)
target(169-majority-element)
target(027-remove-element)
target(168-excel-sheet-column-title)
target(203-remove-linked-list-elements)
target(328-odd-even-linked-list)
target(069-sqrtx)
target(136-single-number)
target(137-single-number-ii)
target(237-delete-node-in-a-linked-list)
target(206-reverse-linked-list)
target(338-counting-bits)
target(160-intersection-of-two-linked-lists)
target(066-plus-one)
target(007-reverse-integer)
target(070-climbing-stairs)
target(026-remove-duplicates-from-sorted-array)
target(190-reverse-bits)
target(171-excel-sheet-column-number)
target(024-swap-nodes-in-pairs)
target(217-contains-duplicate)
target(283-move-zeroes)
target(002-add-two-numbers)
target(092-reverse-linked-list-ii)
target(086-partition-list)
target(082-remove-duplicates-from-sorted-list-ii)
target(258-add-digits)
target(263-ugly-number)
target(202-happy-number)
target(058-length-of-last-word)
target(050-powx-n)
target(067-add-binary)
target(225-implement-stack-using-queues)
target(100-same-tree)
target(226-invert-binary-tree)
target(111-minimum-depth-of-binary-tree)
target(219-contains-duplicate-ii)
target(104-maximum-depth-of-binary-tree)
target(020-valid-parentheses)
target(112-path-sum)
target(268-missing-number)
target(144-binary-tree-preorder-traversal)
target(094-binary-tree-inorder-traversal)
target(102-binary-tree-level-order-traversal)
target(107-binary-tree-level-order-traversal-ii)
target(088-merge-sorted-array)
target(101-symmetric-tree)
target(118-pascals-triangle)
target(342-power-of-four)
target(242-valid-anagram)
target(278-first-bad-version)
target(344-reverse-string)
target(345-reverse-vowels-of-a-string)
target(205-isomorphic-strings)
target(165-compare-version-numbers)
target(121-best-time-to-buy-and-sell-stock)
target(122-best-time-to-buy-and-sell-stock-ii)
target(035-search-insert-position)
target(008-string-to-integer-atoi)
target(053-maximum-subarray)
target(238-product-of-array-except-self)
target(129-sum-root-to-leaf-numbers)
